# setvis

./: .gitignore  .readthedocs.yaml  .travis.yml  Example - import data to visualize sets.ipynb  LICENCE  README.md  pyproject.toml  requirements.txt  requirements_notebooks.txt
.github/ISSUE_TEMPLATE/: setvis-bug-report.md
.github/workflows/: main.yml
docs/source/: api_reference.rst  conf.py  contributing.rst  documentation.rst  history.rst  index.rst  installation.rst  membership.rst  plots.rst  set_expression.rst  set_mode.rst  tutorials.rst
examples/datasets/: Nutrients.csv  Synthetic_APC_DIAG_Fields.csv  convenience_store_membership.txt  convenience_store_table.txt  simpsons - Format 1.csv  simpsons - Format 2.csv
joss/: paper.bib  paper.md
joss/tech-evaluation/: 10-50-100-500-700X10000-25000-50000-100000-500000-mems.csv  10-50-100-500-700X10000-25000-50000-100000-500000-times.csv  100M-psql-mems.csv  100M-psql-times.csv  Evaluation-with-vis.ipynb  Postgre100m.ipynb  README.md  Results.ipynb  populate-psql.sh  postgresql.conf  utils.py
mockup/: Mockup.ipynb  bokeh_server_example.py  requirements.txt
mockup/pace/: plots.py
notebooks/: Example - Membership class functionality.ipynb  Example - import data to visualize missingness.ipynb  Example - import data to visualize sets.ipynb  Example - plot outside notebook.ipynb  Example - plotting outside the notebook.ipynb  Example - selection.ipynb  Information Gain Ratio.ipynb  Interactive Workflow.ipynb  Membership.ipynb  Missingness.ipynb  Mockup.ipynb  Mockup_2.ipynb  Performance.ipynb  Postgres example.ipynb  README.md  Set Mode Example.ipynb  Tutorial 1 - Overview and an example analysis.ipynb  Tutorial 1a - Overview and an example analysis.ipynb  Tutorial 1b - Overview and an example analysis.ipynb  Tutorial 2 - Programmatic selection.ipynb  Tutorial 3 (supplemental) - Create the Postgres database.ipynb  Tutorial 3 - Loading data from Postgres.ipynb  Tutorial Example (programmatic selection).ipynb  Tutorial Example.ipynb  Utility - Information Gain Ratio.ipynb  bokeh_example.ipynb  compare_postgres_with_pace.ipynb  set_mode.ipynb  tutorial_example_session.json  tutorial_example_session_solution.json
pace/: __init__.py  datastructure.py  history.py  membership.py  missingness.py  plots.py  plots_set.py  plotutils.py  setexpression.py
setvis/: history.py  membership.py  plots.py  plotutils.py  setexpression.py
tech-evaluation/: Evaluation.ipynb  Technical Evaluation PACE paper.ipynb  Technical Evaluation PACE vs Upset.ipynb  config.yaml  evaluation_upset.py  utils.py
tests/: check_notebooks.sh  test_history.py  test_membership.py  test_missingness.py  test_plots.py  test_setexpression.py
