[tool.black]
line-length = 79

[tool.poetry]
name = "visualising-data-profiles"
packages = [{ include = "pace" }]
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
bokeh = "^2.3"
numpy = "^1.21"
pandas = "^1.3"
pydantic = "^1.8"
tomli = "^2.0"

notebook = { version = "^6.4", optional = true }
matplotlib = { version = "^3.4.3", optional = true }
scipy = { version = "^1.7", optional = true }
scikit-learn = { version = ">=0.2", optional = true }
Sphinx = { version = "^4.3", optional = true }
nbsphinx = { version = "^0.8", optional = true }
pydata-sphinx-theme = { version = "^0.7", optional = true }
pytest = { version = "^6.2", optional = true }
psycopg2 = { version = "^2.9", optional = true }
numexpr = { version = "^2.7", optional = true }
Bottleneck = { version = "^1.3", optional = true }
psutil = "^5.9.0"

[tool.poetry.extras]
notebooks = ["notebook", "matplotlib", "scikit-learn"]
doc = ["Sphinx", "nbsphinx", "pydata-sphinx-theme"]
test = ["pytest", "papermill"]

performance-extras = ["numexpr", "Bottleneck"]
db = ["psycopg2"]

extra = [
  "notebook",
  "matplotlib",
  "scikit-learn",
  "Sphinx",
  "nbsphinx",
  "pydata-sphinx-theme",
  "pytest",
]

all = [
  "notebook",
  "matplotlib",
  "scikit-learn",
  "Sphinx",
  "nbsphinx",
  "pydata-sphinx-theme",
  "pytest",
  "numexpr",
  "Bottleneck",
  "psycopg2",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
