[tool.black]
line-length = 79

[tool.poetry]
name = "setvis"
packages = [{ include = "setvis" }]
version = "0.1rc3"
description = "Visualize set membership and missing data"
authors = [
    "The Setvis Maintainers",
    "Layik Hama <L.Hama@leeds.ac.uk>",
    "Roy Ruddle <R.A.Ruddle@leeds.ac.uk>",
    "Oliver Strickson <ostrickson@turing.ac.uk>",
    "Pam Wochner <pwochner@turing.ac.uk>"
]
readme = "README.md"
license = "Apache-2.0"
documentation = "https://setvis.readthedocs.io/en/latest/"
repository = "https://github.com/alan-turing-institute/setvis"
classifiers = [
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Visualization",
    "Intended Audience :: Science/Research",
    "Framework :: Jupyter"
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
bokeh = "^2.3"
numpy = "^1.21"
pandas = "^1.3"
pydantic = "^1.8"
tomli = "^2.0"

notebook = { version = "^6.4", optional = true }
matplotlib = { version = "^3.4.3", optional = true }
scipy = { version = "^1.7", optional = true }
scikit-learn = { version = ">=0.2", optional = true }
Sphinx = { version = "^4.3", optional = true }
pydata-sphinx-theme = { version = "^0.7", optional = true }
pytest = { version = "^6.2", optional = true }
psycopg2 = { version = "^2.9", optional = true }
numexpr = { version = "^2.7", optional = true }
Bottleneck = { version = "^1.3", optional = true }

[tool.poetry.extras]
notebooks = ["notebook", "matplotlib", "scikit-learn"]
doc = ["Sphinx", "pydata-sphinx-theme"]
test = ["pytest"]

performance-extras = ["numexpr", "Bottleneck"]
db = ["psycopg2"]

extra = [
  "notebook",
  "matplotlib",
  "scikit-learn",
  "Sphinx",
  "pydata-sphinx-theme",
  "pytest",
]

all = [
  "notebook",
  "matplotlib",
  "scikit-learn",
  "Sphinx",
  "pydata-sphinx-theme",
  "pytest",
  "numexpr",
  "Bottleneck",
  "psycopg2",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
